2026-01-05  Dirk Eddelbuettel  <edd@debian.org>

	* .github/workflows/ci.yaml: Switch to actions/checkout@v6

2025-10-27  Dirk Eddelbuettel  <edd@debian.org>

	* src/calendars.cpp (QlCal::CalendarContainer::setCalendar): In the
	case of an invalid calendar and reset, also store 'TARGET' id

2025-10-14  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.0.17

	* README.md: Use www.r-project.org/Licenses/GPL-2 to avoid timeout

2025-10-03  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll micro version and date

	* src/ql/time/period.cpp: Updated from QuantLib 1.40rc
	* src/ql/time/calendars/singapore.cpp: Idem (for 2025)
	* src/ql/*: Updated QuantLib html URLs

2025-07-23  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.0.16

	* src/ql/utilities/null.hpp: Updated from QuantLib 1.39

	* configure: Add a compiler flag hint to console

2025-07-08  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll micro version and date

	* src/Makevars.in: Adjust for QL 1.39 via DQL_USE_STD_OPTIONAL
	* src/Makevars.win.in: Idem

	* src/ql/errors.cpp: Updated from QuantLib 1.39 (rc)
	* src/ql/optional.hpp: Idem
	* src/ql/time/calendar.cpp: Idem
	* src/ql/time/calendars/israel.?pp: Idem
	* src/ql/time/dat.cpp: Idem

2025-04-23  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.0.15

	* src/ql/time/calendars/china.cpp: Updated from QuantLib 1.38
	* src/ql/time/calendars/hongking.cpp: Idem
	* src/ql/time/calendars/thailand.cpp: Idem

2025-02-14  Dirk Eddelbuettel  <edd@debian.org>

	* .github/workflows/ci.yaml (jobs): Use r-ci action with bootstrap

2025-01-23  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.0.14

	* inst/examples/allUScalendars.R: Moved from demo/
	* demo/: Removed

2025-01-13  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll micro version and date
