@@ -277,9 +277,6 @@ namespace QuantLib {
     std::vector<Date> Calendar::holidayList(
         const Date& from, const Date& to, bool includeWeekEnds) const {
 
-        QL_REQUIRE(to>=from, "'from' date ("
-            << from << ") must be equal to or earlier than 'to' date ("
-            << to << ")");
         std::vector<Date> result;
         for (Date d = from; d <= to; ++d) {
             if (isHoliday(d) && (includeWeekEnds || !isWeekend(d.weekday())))
@@ -291,9 +288,6 @@ namespace QuantLib {
     std::vector<Date> Calendar::businessDayList(
         const Date& from, const Date& to) const {
 
-        QL_REQUIRE(to>=from, "'from' date ("
-            << from << ") must be equal to or earlier than 'to' date ("
-            << to << ")");
         std::vector<Date> result;
         for (Date d = from; d <= to; ++d) {
             if (isBusinessDay(d))
